@@ -11914,6 +11914,10 @@ void menu_ext_desk_settings_configurable_icons_text_background(MENU_ITEM_PARAMET
 	menu_ext_desktop_configurable_icons_text_background.v ^=1;
 }
 
+void menu_ext_desk_settings_configurable_icons_short_text(MENU_ITEM_PARAMETERS)
+{
+	menu_ext_desktop_configurable_icons_short_text.v ^=1;
+}
 
 void menu_ext_desk_settings_upper_box(MENU_ITEM_PARAMETERS)
 {
@@ -12510,6 +12514,11 @@ void menu_ext_desktop_settings(MENU_ITEM_PARAMETERS)
                 menu_add_item_menu_en_es_ca(array_menu_ext_desktop_settings,MENU_OPCION_NORMAL,menu_ext_desk_settings_configurable_icons_text_background,NULL,
                     "Icon text background","Fondo de texto de iconos","Fons de text de icones");
                 menu_add_item_menu_prefijo_format(array_menu_ext_desktop_settings,"[%c] ",(menu_ext_desktop_configurable_icons_text_background.v ? 'X' : ' ' ) );
+                menu_add_item_menu_es_avanzado(array_menu_ext_desktop_settings);
+
+                menu_add_item_menu_en_es_ca(array_menu_ext_desktop_settings,MENU_OPCION_NORMAL,menu_ext_desk_settings_configurable_icons_short_text,NULL,
+                    "Short text icons","Texto corto de iconos","Text curt de icones");
+                menu_add_item_menu_prefijo_format(array_menu_ext_desktop_settings,"[%c] ",(menu_ext_desktop_configurable_icons_short_text.v ? 'X' : ' ' ) );
                 menu_add_item_menu_es_avanzado(array_menu_ext_desktop_settings);
 
                 menu_add_item_menu_en_es_ca(array_menu_ext_desktop_settings,MENU_OPCION_NORMAL,menu_ext_desk_settings_show_app_open,NULL,
