@@ -1678,6 +1678,7 @@ printf("\n"
         "--zxdesktop-no-show-indicators-open-apps       Show icon indicators for open apps\n"
         "--zxdesktop-no-transparent-configurable-icons  Make ZX Desktop configurable icons non transparent\n"
         "--zxdesktop-no-configurable-icons-text-bg      Disable background on configurable icons text\n"
+        "--zxdesktop-configurable-icons-short-text      Show short text on configurable icons\n"
 
         "--zxdesktop-add-icon x y a n e s               Add icon to position x,y, to action a, icon name n, extra parameters e, status s. "
           "Icon name and extra parameters are mandatory, so if they are blank, just write it as \"\". status can be: exists or deleted. action can be: ");
@@ -2815,6 +2816,10 @@ int parse_cmdline_options(int desde_commandline) {
 			else if (!strcmp(argv[puntero_parametro],"--zxdesktop-no-configurable-icons-text-bg")) {
 				menu_ext_desktop_configurable_icons_text_background.v=0;
 			}
+
+            else if (!strcmp(argv[puntero_parametro],"--zxdesktop-configurable-icons-short-text")) {
+                menu_ext_desktop_configurable_icons_short_text.v=1;
+            }
 
 			else if (!strcmp(argv[puntero_parametro],"--zxdesktop-disable-box-upper-buttons")) {
 				menu_ext_desktop_disable_box_upper_icons.v=1;
